--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
+    "cookiefile": "^1.0.10",
     "node-telegram-bot-api": "^0.40.0",
     "request": "^2.88.0",
     "yargs": "^16.2.0"
